<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:background="@android:color/black"
    tools:context="it.redlor.popularmovie2.ui.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/text_color_details"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_version"
            android:textColor="@color/text_color_details" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:gravity="center"
            android:text="@string/author"
            android:textColor="@color/text_color_details"
            android:textSize="@dimen/text_size_big" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/contact_me"
            android:textColor="@color/text_color_details"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="italic" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/height_links"
                android:layout_marginRight="@dimen/small_margin"
                android:layout_weight="0.5"
                android:scaleType="center"
                android:src="@drawable/ic_github" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:autoLink="web"
                android:gravity="left|start|center"
                android:linksClickable="true"
                android:text="@string/github_redlor"
                android:textColorLink="@android:color/holo_blue_dark"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:gravity="center"
            android:text="@string/support_me"
            android:textColor="@color/text_color_details"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/height_links"
                android:layout_marginRight="@dimen/small_margin"
                android:layout_weight="0.5"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_paypal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:autoLink="web"
                android:gravity="left|start"
                android:linksClickable="true"
                android:text="@string/paypal_redlor"
                android:textColorLink="@android:color/holo_blue_dark"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:gravity="center"
            android:text="@string/credits"
            android:textColor="@color/text_color_details"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_hyperlinks_long"
            android:layout_margin="@dimen/small_margin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/height_links"
                android:layout_marginRight="@dimen/small_margin"
                android:layout_weight="0.5"
                android:scaleType="fitCenter"
                android:src="@drawable/wifi" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:autoLink="web"
                android:gravity="left|start"
                android:lines="2"
                android:linksClickable="true"
                android:text="@string/credit_wifi_icon"
                android:textColorLink="@android:color/holo_blue_dark"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_hyperlinks_long"
            android:layout_margin="@dimen/small_margin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/height_links"
                android:layout_marginRight="@dimen/small_margin"
                android:layout_weight="0.5"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:autoLink="web"
                android:gravity="left|start"
                android:lines="2"
                android:linksClickable="true"
                android:text="@string/emoji_credit"
                android:textColor="@color/text_color_details"
                android:textColorLink="@android:color/holo_blue_dark"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
</layout>